[package]
name = "grpc"
version = "0.9.0-alpha.1"
edition = "2021"
authors = ["gRPC Authors"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.6"
futures-core = "0.3.31"
futures-util = "0.3.31"
http = "1.1.0"
http-body = "1.0.1"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.37.0", features = ["sync", "full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.0", path = "../tonic", default-features = false, features = ["codegen", "transport"] }
tower-service = "0.3.3"
url = "2.5.0"
hickory-resolver = { version = "0.25.1", optional = true }
hyper-util = "0.1.14"
hyper = { version = "1.6.0", features = ["client", "http2"] }
tower = "0.5.2"
socket2 = "0.5.10"
pin-project-lite = "0.2.16"

[dev-dependencies]
hickory-server =  "0.25.2"

[features]
default = ["hickory_dns"]
hickory_dns = ["dep:hickory-resolver"]

